syntax = "proto3";

option csharp_namespace = "Sisa.Protobuf.Common";

package sisa.protobuf.common;

message PagingInfo {
  int64 itemCount = 1;
  int32 pageIndex = 2;
  int32 pageSize = 3;
  int32 pageCount = 4;
}
