syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Categories.Responses";

package sisa.blog.api.v1.categories.responses;

import "google/protobuf/wrappers.proto";

import "sisa/libs/common/responses/paging_info_response.proto";
import "sisa/libs/common/responses/actor_info_response.proto";

message CategoryInfoResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.StringValue description = 4;
}

message CategoryResponse {
  // reversed field must be reflect to the database
  reserved 6 to 50; // other data fields
  reserved 52 to 60; // relationship fields
  reserved 63 to 70; // audit fields

  // data fields: from 1 to 50
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.StringValue description = 4;
  int32 post_count = 5;

  // relationship fields: from 51 to 60
  CategoryInfoResponse parent = 51;

  // audit fields: from 63 to 70
  sisa.common.responses.ActorInfoResponse creator = 61;
  sisa.common.responses.ActorInfoResponse updater = 62;
}

message SingleCategoryResponse {
  CategoryResponse value = 1;
}

message ListCategoriesResponse {
  repeated CategoryResponse value = 1;
  sisa.common.responses.PagingInfoResponse paging = 2;
}
